--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Admin App</string>
+    <string name="lbl_set_profile_photo">Select Image</string>
+    <string name="lbl_take_camera_picture">Take a picture</string>
+    <string name="lbl_choose_from_gallery">Choose from gallery</string>
+    <string name="toast_image_intent_null">Image picker option is missing!</string>
+    <string name="dialog_permission_title">Permission</string>
+    <string name="dialog_permission_message">You need to granted permission</string>
+    <string name="go_to_settings">Go to setting</string>
+    <string name="action_settings">Setting</string>
 </resources>
