love2knot App https://my.visme.co/view/y4j06yxz-love2knot-project#s1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="dialog_permission_message">You need to granted permission</string>
     <string name="go_to_settings">Go to setting</string>
     <string name="action_settings">Setting</string>
+    <string name="fruits_vegetables"><![CDATA[Fruits & Vegetables]]></string>
 </resources>
